syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ray.schedule.grpc";
option java_outer_classname = "ScheduleServiceImpl";
package schedule;

message Reservation {
  int32 id = 1;
  int32 vehicle_id = 2;
  string client_email = 3;
  string client_name = 4;
  string type = 5;
}

message DateTime {
  int32 year = 1;
  int32 month = 2;
  int32 day = 3;
  int32 hour = 4;
  int32 minute = 5;
  int32 second = 6;
  int32 timeZoneOffset = 7;
}
